--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,78 @@ body {
 }
 
 /* Add styles here! */
+
+p,
+h1,
+h2 {
+  margin: 0px;
+}
+
+header .max-width-wrapper,
+main .max-width-wrapper {
+  max-width: 808px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.intro-chunk {
+  padding: 96px 24px 64px 24px;
+}
+
+.title {
+  margin-bottom: 48px;
+
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 38.4px;
+  text-align: left;
+}
+
+.intro-chunk p {
+  max-width: 415px;
+  margin-top: 16px;
+
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: left;
+}
+
+.intro-chunk p strong {
+  color: #009966;
+}
+
+main {
+  background-color: #666666;
+  border-top: 8px solid #999999;
+  padding-bottom: 66px;
+}
+
+.card {
+  background-color: #ffffff;
+  padding: 8px 24px 24px 24px;
+  margin-top: 66px;
+}
+
+.card p {
+  margin-top: 16px;
+  margin-bottom: 0px;
+
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  text-align: left;
+}
+
+.indented-heading {
+  max-width: 398px;
+  border-bottom: 8px solid #cc9900;
+  background-color: #ffbf00;
+  padding: 16px 24px;
+  margin: 0px 0px 0px -32px;
+
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 28.8px;
+  text-align: left;
+}
